--- a/kalistaCommonplace.html
+++ b/kalistaCommonplace.html
@@ -94,11 +94,11 @@ background-color:#8B85C1;
 	<body>
     <div id="heading">
         <h1>Kalista's Commonplace Book</h1>
-		<div class="nav"><a href="https://docs.google.com/document/d/1o2Id4lgzgHp8K2oVfTxEQFTvpeqodp9Bn52p_rjoIuI/edit?usp=sharing">Internet</a></div>
+		<div class="nav"><a href="internet.html">Internet</a></div>
 		<div class="nav"><a href="https://docs.google.com/document/d/1Bb3_xl2X-lESQ6vFy9AzvIScjPQOa-CTBkY4CpknRuk/edit?usp=sharing">History</a></div>
-		<div class="nav"><a href="insert link here">Pop Culture</a></div>
-		<div class="nav"><a href="insert link here">Sports</a></div>
-		<div class="nav"><a href="insert link here">Technology</a></div>
+		<div class="nav"><a href="../insert link here">Pop Culture</a></div>
+		<div class="nav"><a href="../insert link here">Sports</a></div>
+		<div class="nav"><a href="../insert link here">Technology</a></div>
 
 
 	
